[gd_scene load_steps=8 format=3 uid="uid://dubnsno8bya0v"]

[ext_resource type="PackedScene" uid="uid://36gmo74w6e2q" path="res://game/actors/actor.tscn" id="1_7k104"]
[ext_resource type="Script" uid="uid://bk2r1xw7g054s" path="res://game/actors/enemies/enemy.gd" id="2_4gyqm"]
[ext_resource type="PackedScene" uid="uid://ccjntjndehkwt" path="res://game/actors/enemies/enemy_hit_effect.tscn" id="3_d8r0d"]
[ext_resource type="Script" uid="uid://htjsg10vl7mo" path="res://game/actors/flasher.gd" id="4_hc3iy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qi2p4"]
radius = 1.5678711
height = 11.586121

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iifgy"]
radius = 2.1767578
height = 12.215332

[sub_resource type="BlackboardPlan" id="BlackboardPlan_nyryn"]
prefetch_nodepath_vars = false
var/direction_light/name = &"direction_light"
var/direction_light/type = 24
var/direction_light/value = Object(Node3D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","transform":Transform3D(1, -1.3322676e-15, -2.646978e-23, 1.3322676e-15, 1, 0, 1.6543612e-24, -2.204052e-39, 16, 0, 3, -2),"rotation_edit_mode":0,"rotation_order":2,"top_level":false,"visible":true,"visibility_parent":NodePath(""),"script":null)

var/direction_light/hint = 34
var/direction_light/hint_string = ""
var/roar_point/name = &"roar_point"
var/roar_point/type = 24
var/roar_point/value = Object(Node3D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","transform":Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7010176, 0),"rotation_edit_mode":0,"rotation_order":2,"top_level":false,"visible":true,"visibility_parent":NodePath(""),"script":null)

var/roar_point/hint = 34
var/roar_point/hint_string = ""
var/self/name = &"self"
var/self/type = 24
var/self/value = Object(CharacterBody3D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","transform":Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0),"rotation_edit_mode":0,"rotation_order":2,"top_level":false,"visible":true,"visibility_parent":NodePath(""),"disable_mode":0,"collision_layer":2,"collision_mask":4,"collision_priority":1.0,"input_ray_pickable":true,"input_capture_on_drag":false,"axis_lock_linear_x":false,"axis_lock_linear_y":false,"axis_lock_linear_z":false,"axis_lock_angular_x":false,"axis_lock_angular_y":false,"axis_lock_angular_z":false,"motion_mode":0,"up_direction":Vector3(0, 1, 0),"slide_on_ceiling":true,"velocity":Vector3(0, 0, 0),"max_slides":6,"wall_min_slide_angle":0.2617994,"floor_stop_on_slope":true,"floor_constant_speed":false,"floor_block_on_wall":true,"floor_max_angle":0.7853982,"floor_snap_length":0.1,"platform_on_leave":0,"platform_floor_layers":4294967295,"platform_wall_layers":0,"safe_margin":0.001,"script":Resource("res://game/actors/enemies/cogwork_dancers/cogwork_dancer.gd"),"top":false,"to_waypoint_spin_speed":30.0)

var/self/hint = 34
var/self/hint_string = ""

[node name="Enemy" instance=ExtResource("1_7k104")]
collision_layer = 2
script = ExtResource("2_4gyqm")

[node name="Collision" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0384521, 0)
shape = SubResource("CapsuleShape3D_qi2p4")

[node name="Health" parent="." index="2" node_paths=PackedStringArray("_flasher")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 8
damage_invincibility_time = 0.166
give_silk = true
damage_effect_prefab = ExtResource("3_d8r0d")
_flasher = NodePath("../Flasher")

[node name="Collision" parent="Health" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.8212891, 0)
shape = SubResource("CapsuleShape3D_iifgy")

[node name="Flasher" type="Node" parent="." index="4"]
script = ExtResource("4_hc3iy")
metadata/_custom_type_script = "uid://htjsg10vl7mo"

[node name="TargetPoint" type="VisibleOnScreenNotifier3D" parent="." index="5"]

[node name="BehaviorTree" type="BTPlayer" parent="." index="6"]
blackboard_plan = SubResource("BlackboardPlan_nyryn")

[connection signal="took_damage" from="Health" to="." method="_on_health_took_damage"]
[connection signal="screen_entered" from="TargetPoint" to="." method="_on_target_point_screen_entered"]
[connection signal="screen_exited" from="TargetPoint" to="." method="_on_target_point_screen_exited"]

[editable path="Health"]
